name:                cardano-sl-core
version:             3.0.2
synopsis:            Cardano SL - core
description:         Cardano SL - core
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag asserts
  default:     True
  manual:      True

library
  hs-source-dirs:      src
  exposed-modules:
                       Pos.Core
                       Pos.Core.Aeson
                       Pos.Core.Binary
                       Pos.Core.Chrono
                       Pos.Core.Limits

                       Pos.Core.ProtocolConstants

                       Pos.Core.NetworkAddress

                       Pos.Core.NetworkMagic

                       Pos.Core.Common
                       Pos.Core.Constants
                       Pos.Core.Context

                       -- JsonLog (moved from networking in
                       -- the `sinbin` shuffle). All modules
                       -- must be exposed so that `networking`
                       -- can import & re-export them.
                       Pos.Core.JsonLog
                       Pos.Core.JsonLog.CanJsonLog
                       Pos.Core.JsonLog.Event
                       Pos.Core.JsonLog.JsonLogT
                       Pos.Core.JsonLog.LogEvents

                       -- Concurrency operations, previously
                       -- in `Mockable`.
                       Pos.Core.Conc

                       Pos.Core.Reporting

                       Pos.Core.Slotting

                       Pos.Core.Util.LogSafe
                       Pos.Core.Util.TimeLimit

                       Pos.Core.Attributes
                       Pos.Core.Exception
                       Pos.Core.Merkle

                       Pos.Core.Metrics.Constants

  other-modules:
                       -- Aeson
                       Pos.Core.Aeson.Orphans

                       -- Binary
                       Pos.Core.Binary.Orphans

                       -- Common
                       Pos.Core.Common.AddrAttributes
                       Pos.Core.Common.Address
                       Pos.Core.Common.AddressHash
                       Pos.Core.Common.AddrSpendingData
                       Pos.Core.Common.AddrStakeDistribution
                       Pos.Core.Common.BlockCount
                       Pos.Core.Common.ChainDifficulty
                       Pos.Core.Common.Coeff
                       Pos.Core.Common.Coin
                       Pos.Core.Common.CoinPortion
                       Pos.Core.Common.Script
                       Pos.Core.Common.SharedSeed
                       Pos.Core.Common.SlotLeaders
                       Pos.Core.Common.StakeholderId
                       Pos.Core.Common.Stakes
                       Pos.Core.Common.TxFeePolicy
                       Pos.Core.Common.TxSizeLinear

                       -- Context
                       Pos.Core.Context.PrimaryKey

                       -- Slotting
                       Pos.Core.Slotting.EpochIndex
                       Pos.Core.Slotting.EpochOrSlot
                       Pos.Core.Slotting.LocalSlotIndex
                       Pos.Core.Slotting.SlotCount
                       Pos.Core.Slotting.SlotId
                       Pos.Core.Slotting.TimeDiff
                       Pos.Core.Slotting.Timestamp
                       Pos.Core.Slotting.Class
                       Pos.Core.Slotting.MemState
                       Pos.Core.Slotting.Types
                       Pos.Core.Slotting.Util

                       -- Reporting
                       Pos.Core.Reporting.MemState
                       Pos.Core.Reporting.Methods
                       Pos.Core.Reporting.Metrics

  build-depends:       aeson
                     , aeson-options
                     , ansi-terminal
                     , base
                     , base58-bytestring
                     , bytestring
                     , canonical-json
                     , cardano-report-server >= 0.4.5
                     , cardano-sl-binary
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , cborg
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , deepseq
                     , deriving-compat
                     , ekg-core
                     , ether >= 0.5
                     , exceptions
                     , formatting
                     , hashable
                     , http-api-data
                     , lens
                     , parsec
                     , memory
                     , mmorph
                     , monad-control
                     , mtl
                     , random
                     , reflection
                     , resourcet
                     , safecopy
                     , safe-exceptions
                     , safecopy
                     , serokell-util
                     , servant >= 0.8.1
                     , stm
                     , template-haskell
                     , text
                     , time
                     , time-units
                     , transformers
                     , transformers-base
                     , transformers-lift
                     , universum
                     , unliftio
                     , unliftio-core
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       InstanceSigs
                       NoImplicitPrelude
                       OverloadedStrings
                       RankNTypes
                       TypeApplications
                       TypeFamilies
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:
                       -O2
                       -Wall

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
  if flag(asserts)
    cpp-options: -DASSERTS_ON

test-suite core-test
  main-is:             test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

  other-modules:
                       Spec
                       Test.Pos.Core.AddressSpec
                       Test.Pos.Core.Bi
                       Test.Pos.Core.CborSpec
                       Test.Pos.Core.Chrono
                       Test.Pos.Core.ChronoSpec
                       Test.Pos.Core.CoinSpec
                       Test.Pos.Core.ExampleHelpers
                       Test.Pos.Core.Gen
                       Test.Pos.Core.Json
                       Test.Pos.Core.LimitsSpec
                       Test.Pos.Core.SafeCopy
                       Test.Pos.Core.SeedSpec
                       Test.Pos.Core.SlottingSpec

                       Test.Pos.Core.Arbitrary
                       Test.Pos.Core.Arbitrary.Slotting
                       Test.Pos.Core.Arbitrary.Unsafe
                       Test.Pos.Core.Dummy

  build-depends:       base
                     , bytestring
                     , cardano-crypto
                     , cardano-sl-binary
                     , cardano-sl-binary-test
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-crypto-test
                     , cardano-sl-util
                     , cardano-sl-util-test
                     , containers
                     , cryptonite
                     , formatting
                     , generic-arbitrary
                     , hedgehog
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , serokell-util >= 0.1.3.4
                     , text
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers
  build-tool-depends: hspec-discover:hspec-discover

  ghc-options:
                       -threaded
                       -rtsopts
                       -Wall


  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
