name:                cardano-sl-crypto
version:             1.1.0
synopsis:            Cardano SL - cryptography primitives
description:         This package contains cryptography primitives used in Cardano SL.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Aeson.Crypto
                       Pos.Arbitrary.Crypto
                       Pos.Binary.Crypto

                       Pos.Crypto

                       Pos.Crypto.Configuration
                       Pos.Crypto.Hashing
                       Pos.Crypto.HD
                       Pos.Crypto.Random
                       Pos.Crypto.SecretSharing
                       Pos.Crypto.Signing
                       Pos.Crypto.Signing.Redeem
                       Pos.Crypto.Signing.Safe
                       Pos.Crypto.Signing.Signing

  other-modules:
                       Pos.Arbitrary.Crypto.Unsafe

                       Pos.Crypto.AsBinary
                       Pos.Crypto.Encryption
                       Pos.Crypto.Scrypt

                       Pos.Crypto.Signing.Check
                       Pos.Crypto.Signing.Tag
                       Pos.Crypto.Signing.Types
                       Pos.Crypto.Signing.Types.Redeem
                       Pos.Crypto.Signing.Types.Safe
                       Pos.Crypto.Signing.Types.Signing
                       Pos.Crypto.Signing.Types.Tag

  build-depends:       QuickCheck
                     , aeson
                     , autoexporter
                     , base
                     , binary
                     , bytestring
                     , cardano-crypto
                     , cardano-sl-binary
                     , cardano-sl-util
                     , cborg
                     , cryptonite
                     , cryptonite-openssl
                     , data-default
                     , ed25519
                     , formatting
                     , generic-arbitrary
                     , hashable
                     , lens
                     , memory
                     , mtl
                     , pvss
                     , quickcheck-instances
                     , reflection
                     , safe-exceptions
                     , scrypt
                     , serokell-util
                     , text
                     , text-format
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
