name:                cardano-sl-crypto
version:             1.1.1
synopsis:            Cardano SL - cryptography primitives
description:         This package contains cryptography primitives used in Cardano SL.
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
                       Pos.Aeson.Crypto
                       Pos.Binary.Crypto

                       Pos.Crypto

                       Pos.Crypto.AsBinary
                       Pos.Crypto.Configuration
                       Pos.Crypto.Hashing
                       Pos.Crypto.HD
                       Pos.Crypto.Random
                       Pos.Crypto.SecretSharing
                       Pos.Crypto.Signing
                       Pos.Crypto.Signing.Redeem
                       Pos.Crypto.Signing.Safe
                       Pos.Crypto.Signing.Signing

  other-modules:
                       Pos.Crypto.Encryption
                       Pos.Crypto.Scrypt

                       Pos.Crypto.Signing.Check
                       Pos.Crypto.Signing.Tag
                       Pos.Crypto.Signing.Types
                       Pos.Crypto.Signing.Types.Redeem
                       Pos.Crypto.Signing.Types.Safe
                       Pos.Crypto.Signing.Types.Signing
                       Pos.Crypto.Signing.Types.Tag

  build-depends:       aeson
                     , base
                     , binary
                     , bytestring
                     , cardano-crypto
                     , cardano-sl-binary
                     , cardano-sl-util
                     , cborg
                     , cryptonite
                     , cryptonite-openssl
                     , data-default
                     , ed25519
                     , formatting
                     , hashable
                     , lens
                     , memory
                     , mtl
                     , pvss
                     , reflection
                     , safe-exceptions
                     , scrypt
                     , serokell-util
                     , text
                     , text-format
                     , universum
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

test-suite test
  main-is:             test.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0

  other-modules:
                       Spec
                       Test.Pos.Crypto.CryptoSpec

  build-depends:       MonadRandom
                     , QuickCheck
                     , base
                     , bytestring
                     , canonical-json
                     , cardano-sl-binary
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , cborg
                     , cereal
                     , containers
                     , cryptonite
                     , data-default
                     , extra
                     , filelock
                     , fmt
                     , formatting
                     , generic-arbitrary
                     , half
                     , hspec
                     , lens
                     , memory
                     , mtl
                     , pvss
                     , quickcheck-instances
                     , random
                     , reflection
                     , safecopy
                     , serokell-util >= 0.1.3.4
                     , tagged
                     , text
                     , text-format
                     , time-units
                     , universum >= 0.1.11
                     , unordered-containers
                     , vector

  ghc-options:         -threaded
                       -rtsopts
                       -Wall
                       -fno-warn-orphans

  -- linker speed up for linux
  if os(linux)
    ghc-options:       -optl-fuse-ld=gold
    ld-options:        -fuse-ld=gold

  default-extensions:   DeriveDataTypeable
                        DeriveGeneric
                        GeneralizedNewtypeDeriving
                        StandaloneDeriving
                        FlexibleContexts
                        FlexibleInstances
                        MultiParamTypeClasses
                        FunctionalDependencies
                        DefaultSignatures
                        NoImplicitPrelude
                        OverloadedStrings
                        RecordWildCards
                        TypeApplications
                        TupleSections
                        ViewPatterns
                        LambdaCase
                        MultiWayIf
                        ConstraintKinds
                        UndecidableInstances
                        BangPatterns
                        TemplateHaskell
                        ScopedTypeVariables
                        GADTs
                        MonadFailDesugaring

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp

