name:                cardano-sl-db
version:             1.1.1
synopsis:            Cardano SL - basic DB interfaces
description:         Cardano SL - basic DB interfaces
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Pos.DB
                       Pos.DB.BatchOp
                       Pos.DB.Class
                       Pos.DB.Error
                       Pos.DB.Functions
                       Pos.DB.BlockIndex
                       Pos.DB.GState.Common
                       Pos.DB.GState.Stakes
                       Pos.DB.Misc.Common
                       Pos.DB.Pure
                       Pos.DB.Sum
                       Pos.DB.Rocks
                       Pos.DB.Rocks.Functions
                       Pos.DB.Rocks.Types

  build-depends:       base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-util
                     , concurrent-extra
                     , conduit
                     , containers
                     , data-default
                     , directory
                     , ether >= 0.5
                     , filepath
                     , formatting
                     , lens
                     , memory
                     , mtl
                     , resourcet
                     , rocksdb-haskell-ng
                     , serokell-util
                     , text-format
                     , transformers
                     , universum

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -fno-warn-orphans
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
