name:                cardano-sl-db
version:             1.3.0
synopsis:            Cardano SL - basic DB interfaces
description:         Cardano SL - basic DB interfaces
license:             MIT
license-file:        LICENSE
author:              Serokell
maintainer:          hi@serokell.io
copyright:           2016 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pos.DB
                       Pos.DB.BatchOp
                       Pos.DB.Class
                       Pos.DB.Error
                       Pos.DB.Functions
                       Pos.DB.BlockIndex
                       Pos.DB.GState.Common
                       Pos.DB.GState.Stakes
                       Pos.DB.Misc.Common
                       Pos.DB.Pure
                       Pos.DB.Sum
                       Pos.DB.Rocks
                       Pos.DB.Rocks.Functions
                       Pos.DB.Rocks.Types

                       Pos.DB.Txp
                       Pos.DB.Txp.Logic
                       Pos.DB.Txp.MemState

                       Pos.DB.Txp.Settings
                       Pos.DB.Txp.Stakes
                       Pos.DB.Txp.Utxo

                       Pos.DB.Lrc

  other-modules:       Pos.DB.Txp.Logic.Common
                       Pos.DB.Txp.Logic.Global
                       Pos.DB.Txp.Logic.Local
                       Pos.DB.Txp.MemState.Class
                       Pos.DB.Txp.MemState.Holder
                       Pos.DB.Txp.MemState.Metrics
                       Pos.DB.Txp.MemState.Types

                       Pos.DB.Lrc.Common
                       Pos.DB.Lrc.Consumer
                       Pos.DB.Lrc.Consumer.Delegation
                       Pos.DB.Lrc.Consumer.Ssc
                       Pos.DB.Lrc.Consumer.Update
                       Pos.DB.Lrc.Consumer
                       Pos.DB.Lrc.Consumers
                       Pos.DB.Lrc.Context
                       Pos.DB.Lrc.Issuers
                       Pos.DB.Lrc.Leaders
                       Pos.DB.Lrc.Lrc
                       Pos.DB.Lrc.Mode
                       Pos.DB.Lrc.RichmenBase
                       Pos.DB.Lrc.Richmen
                       Pos.DB.Lrc.Seed

  build-depends:       aeson
                     , base
                     , bytestring
                     , cardano-sl-binary
                     , cardano-sl-core
                     , cardano-sl-crypto
                     , cardano-sl-lrc
                     , cardano-sl-txp
                     , cardano-sl-util
                     , concurrent-extra
                     , conduit
                     , containers
                     , data-default
                     , directory
                     , ekg-core
                     , ether >= 0.5
                     , filepath
                     , formatting
                     , lens
                     , log-warper
                     , memory
                     , mmorph
                     , mtl
                     , reflection
                     , resourcet
                     , rocksdb-haskell-ng
                     , serokell-util
                     , formatting
                     , stm
                     , transformers
                     , universum
                     , unliftio
                     , unordered-containers

  default-language:    Haskell2010

  default-extensions:  DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       StandaloneDeriving
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       FunctionalDependencies
                       DefaultSignatures
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TupleSections
                       ViewPatterns
                       LambdaCase
                       MultiWayIf
                       ConstraintKinds
                       UndecidableInstances
                       BangPatterns
                       TemplateHaskell
                       ScopedTypeVariables
                       MonadFailDesugaring

  ghc-options:         -Wall
                       -O2

  build-tools: cpphs >= 1.19
  ghc-options: -pgmP cpphs -optP --cpp
